# useless-code

./: .gitignore  asio_sample_sync_server.cpp
kys-cpp/asio/: asio_sample_sync_client.cpp
kys-cpp/save/: save_gen.py  saveconfig.yaml
test-cpp/: CMakeLists.txt
test-cpp/src/: main.cpp
